fix: 404 dark mode

--- a/docs/.vuepress/theme/styles/theme-dark.styl
+++ b/docs/.vuepress/theme/styles/theme-dark.styl
@@ -6,6 +6,7 @@
     body {
         background-image: url('/images/background-schematics-dark.svg') !important;
     }
+
     .theme-container {
     
         // Content
@@ -227,6 +228,11 @@
                 color: $headingColorDark;
             }
         }
+    }
+
+    .theme-container.page-nosidebar {
+        background-color: $contentBgColorDark;
+        color: $textColorDark;
     }
 
 }
